src/components/wc-menu-button/wc-menu-button.css
.menu-icon {
  margin: 0;
  width: var(--wc-menu-button-width, 37px);
  position: relative;
  display: inline-block;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.5s ease-in-out;
  -moz-transition: 0.5s ease-in-out;
  -o-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
  cursor: default;
  transition: all 0.2s ease-in-out;
}

/* this trick makes the height 75% of the width (4:3 ratio) */
.menu-icon:after {
  padding-top: 75%;
  display: block;
  content: "";
}

.menu-icon:hover {
  opacity: var(--wc-menu-button-hover-opacity, 0.75);
}

.no-scale:hover {
  transform: none;
}

.menu-icon span {
  display: block;
  position: absolute;
  height: 20%;
  width: 100%;
  background: var(--wc-menu-button-color, #000000);
  border-radius: 10%;
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  -moz-transition: 0.25s ease-in-out;
  -o-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.menu-icon span:nth-child(1) {
  top: 0%;
}

.menu-icon span:nth-child(2),
.menu-icon span:nth-child(3) {
  top: 40%;
}

.menu-icon span:nth-child(4) {
  top: 80%;
}

.menu-icon.open span:nth-child(1) {
  top: 40%;
  width: 0%;
  left: 50%;
}

.menu-icon.open span:nth-child(2) {
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -o-transform: rotate(45deg);
  transform: rotate(45deg);
}

.menu-icon.open span:nth-child(3) {
  -webkit-transform: rotate(-45deg);
  -moz-transform: rotate(-45deg);
  -o-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.menu-icon.open span:nth-child(4) {
  top: 40%;
  width: 0%;
  left: 50%;
}

